# libtux

./: .gitignore  README.md  api.txt  meson.build  meson_options.txt
pal/: meson.build
pal/lfi/: ctx.c  meson.build  platform.c  platform.h  regs.h  vm.c
pal/lfi/arch/arm64/: regs.c  runtime.S
pal/lfi/arch/x64/: regs.c  runtime.S
pal/lfi/include/: lfi.h
pal/sud/: ctx.c  meson.build  platform.c  platform.h  runtime_x64.S  sud.c  sys.c  sys.h  syscall.s  vm.c
pal/sud/include/: sud.h
pal/sud/sud-example/: main.c
src/: align.h  buf.c  buf.h  config.h  elf.c  elf.h  elfload.c  elfload.h  engine.h  fd.c  fd.h  file.c  file.h  futex.h  host.h  meson.build  perf.c  perf_support.c  platform.h  print.h  proc.c  proc.h  sys.c  sys.h  thread.h  tux.c  types.h
src/arch/: arch_regs.h  regs.h
src/arch/arm64/: arch_regs.h  arch_sys.h  regs.c  sys.c
src/arch/x64/: arch_sys.h  arch_types.h  meson.build  regs.c  sys.c
src/host/: error.h  meson.build
src/host/linux/: futex.c
src/host/posix/: file.c  file.h  futex.c  info.c  random.c  time.c
src/include/: lfi.h  lfi_host.h  lfi_tux.h  tux.h  tux_arch.h  tux_host.h  tux_pal.h
src/pal/: ctx.c  meson.build  platform.c  platform.h  vm.c
src/pal/arch/arm64/: regs.c  runtime.S
src/pal/arch/x64/: regs.c  runtime.S
src/syscalls/: meson.build  strace.c  sys_clock.c  sys_cwd.c  sys_fcntl.c  sys_file.c  sys_info.c  sys_ioctl.c  sys_mem.c  sys_proc.c  sys_random.c  sys_signal.c  sys_thread.c  syscalls.c  syscalls.h
subprojects/: libargp.wrap  libboxmap.wrap  libmmap.wrap
subprojects/packagefiles/libargp/: meson.build
test/: meson.build  test_raw.c  test_tux.c
test/raw/: test.S
test/tux/: argv.c  argv.c.out  hello.S  hello.c
tools/: lfi_run.c  meson.build  perf_support.c  tux_run.c
