option('host', type: 'string', value: 'auto', description: 'host platform')
option('pal', type: 'string', value: 'auto', description: 'isolation layer')
option('host_fork', type: 'boolean', value: true, description: 'use host fork implementation')
option('analyzer', type: 'boolean', value: false, description: 'enable the GCC analyzer')
