option('host', type: 'string', value: 'auto', description: 'host platform')
option('analyzer', type: 'boolean', value: false, description: 'enable the GCC analyzer')
option('threads', type: 'boolean', value: true, description: 'enable use of threads and futexes')
option('max_futex', type: 'integer', min: 1, max: 16384, value: 128, description: 'maximum number of futexes per process')
option('linux', type: 'boolean', value: true, description: 'enable Linux emulation')
