if host == 'linux'
  srcs += files(
    'linux/random.c',
    'linux/dir.c',
    'linux/info.c',
    'linux/path.c',
    'posix/file.c',
    'posix/thread.c',
    'posix/time.c',
  )
elif host == 'posix'
  srcs += files(
    'posix/random.c',
    'posix/file.c',
    'posix/dir.c',
    'posix/thread.c',
    'posix/time.c',
    'posix/path.c',
    'posix/info.c',
  )
endif
